--- a/src/gateway/requirements.txt
+++ b/src/gateway/requirements.txt
@@ -1,10 +1,13 @@
 astroid==3.3.5
 blinker==1.8.2
+certifi==2024.8.30
+charset-normalizer==3.4.0
 click==8.1.7
 dill==0.3.9
 dnspython==2.7.0
 Flask==3.0.3
 Flask-PyMongo==2.3.0
+idna==3.10
 isort==5.13.2
 itsdangerous==2.2.0
 jedi==0.19.1
@@ -16,5 +19,7 @@ pika==1.3.2
 platformdirs==4.3.6
 pylint==3.3.1
 pymongo==4.10.1
+requests==2.32.3
 tomlkit==0.13.2
+urllib3==2.2.3
 Werkzeug==3.0.4
