--- a/src/.gitignore
+++ b/src/.gitignore
@@ -133,4 +133,4 @@ dmypy.json
 
 # Ignore all venv folders recursively
 **/venv/
-notification/manifests/secret.yaml
+.notification/manifests/secret.yaml
