--- a/src/notification/manifests/secret.yaml
+++ b/src/notification/manifests/secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: notification-secret
 stringData:
   GMAIL_ADDRESS: "shiva.calm.95@gmail.com"
-  GMAIL_PASSWORD: "snbdhwlevpbipwlp"
+  GMAIL_PASSWORD: ""
 type: Opaque
